# GameTranslator

./: .gitignore  AGEENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: books.rs  dto.rs  events.rs  mod.rs
apps/desktop/src/api/: contracts.ts  errors.ts
apps/desktop/src/features/books/: BookWorkspace.tsx  ProjectCenter.tsx  book-workspace.css  contracts.ts
apps/desktop/src/features/export/: ExportPanel.tsx
apps/desktop/src/features/history/: PatchHistory.tsx
apps/desktop/src/features/projects/: ProjectHome.tsx  ProjectOverview.tsx
apps/desktop/src/features/providers/: ProviderDrawer.tsx
apps/desktop/src/features/review/: SegmentTable.tsx
apps/desktop/src/features/translation/: LanguageSettings.tsx  TranslationProgress.tsx
apps/desktop/src/features/workspace/: WorkspaceChrome.tsx  workspace-chrome.css
apps/desktop/src/styles/: global.css  tokens.css
apps/desktop/src/test/: api-errors.test.ts  book-workspace.test.tsx  project-flow.test.tsx  provider-drawer.test.tsx  translation-progress.test.tsx
crates/app-core/: Cargo.toml
crates/app-core/src/: adapters.rs  content.rs  credentials.rs  engine.rs  error.rs  lib.rs  models.rs  patch.rs  provider_factory.rs  translation_policy.rs
crates/app-core/tests/: adapter_registry.rs  content_sources.rs  contracts.rs  credentials.rs  patch_export.rs  provider_factory.rs  translation_policy.rs
crates/content-book/: Cargo.toml
crates/content-book/examples/: publication_sample.rs
crates/content-book/src/: lib.rs
crates/content-book/tests/: containers.rs  export.rs  plain_text.rs  publication_exports.rs  serialization.rs
crates/content-core/: Cargo.toml
crates/content-core/src/: lib.rs  output.rs  segment.rs  source.rs
crates/content-core/tests/: contract.rs
crates/content-game/: Cargo.toml
crates/content-game/src/: error.rs  lib.rs  renpy.rs  rpgmaker.rs
crates/content-game/tests/: renpy.rs  rpgmaker.rs
crates/content-rimworld/: Cargo.toml
crates/content-rimworld/src/: lib.rs
crates/content-rimworld/tests/: adapter.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: adapter.rs  lib.rs  project.rs  segment.rs
crates/engine-core/tests/: adapter_contract.rs
crates/engine-renpy/: Cargo.toml
crates/engine-renpy/src/: detect.rs  generate.rs  lib.rs  template.rs  write.rs
crates/engine-renpy/tests/: adapter.rs  write.rs
crates/engine-rpgmaker/: Cargo.toml
crates/engine-rpgmaker/src/: commands.rs  detect.rs  extract.rs  lib.rs  write.rs
crates/engine-rpgmaker/tests/: detect.rs  extract_database.rs  extract_maps.rs  round_trip.rs
crates/project-store/: Cargo.toml
crates/project-store/src/: cache.rs  jobs.rs  lib.rs  migrations.rs  projects.rs  segments.rs  tasks.rs
crates/project-store/tests/: cache.rs  recovery.rs  tasks.rs
crates/provider-core/: Cargo.toml
crates/provider-core/src/: lib.rs  ollama.rs  openai_compatible.rs
crates/provider-core/tests/: provider_contract.rs
crates/qa-core/: Cargo.toml
crates/qa-core/src/: checks.rs  lib.rs  placeholders.rs
crates/qa-core/tests/: checks.rs  placeholders.rs
crates/translation-core/: Cargo.toml
crates/translation-core/src/: batch.rs  lib.rs  orchestrator.rs  retry.rs
crates/translation-core/tests/: orchestration.rs
docs/: model-providers.md  patch-format.md  supported-games.md
docs/decisions/: ADR-001-desktop-architecture.md  ADR-002-content-source-adapter-architecture.md  ADR-003-application-service-boundary.md  ADR-004-book-document-project-pipeline.md  ADR-005-publication-export-pipeline.md
docs/plans/: 2026-07-11-game-translator-design.md  2026-07-11-multilingual-translation-design.md  2026-07-11-mvp-implementation.md  2026-07-12-content-source-adapter-implementation.md  2026-07-12-deepseek-adaptive-throughput.md  2026-07-12-desktop-state-persistence.md  2026-07-12-high-throughput-translation-design.md  2026-07-12-patch-history-and-uninstall.md  2026-07-12-provider-base-url-presets-implementation.md  2026-07-12-renpy-engine-design.md  2026-07-12-renpy-engine-implementation.md  2026-07-12-review-table-navigation.md  2026-07-13-architecture-convergence.md  2026-07-14-book-workspace-design.md  2026-07-14-book-workspace-integration.md  2026-07-14-book-workspace-prototype.md  2026-07-14-full-book-translation-design.md  2026-07-14-publication-export-design.md  2026-07-14-publication-export-implementation.md  2026-07-14-real-book-pipeline.md  2026-07-14-unified-project-studio-design.md  2026-07-14-unified-project-studio-implementation.md
fixtures/renpy-template/game/tl/_gametranslator_template/: script.rpy
fixtures/rimworld-mod-minimal/About/: About.xml
fixtures/rimworld-mod-minimal/Languages/English/Keyed/: Example.xml
fixtures/rpgmaker-mv-minimal/: package.json
fixtures/rpgmaker-mv-minimal/www/data/: System.json
fixtures/rpgmaker-mz-dialogue/: package.json
fixtures/rpgmaker-mz-dialogue/data/: CommonEvents.json  Items.json  Map001.json  Skills.json  System.json
fixtures/rpgmaker-mz-minimal/: package.json
fixtures/rpgmaker-mz-minimal/data/: System.json
fixtures/rpgmaker-mz-missing-system/: package.json
fixtures/unsupported/: README.txt
prototype/: index.html  package-lock.json  package.json
prototype/src/: App.test.tsx  App.tsx
prototype/src/components/: BookWorkspace.tsx  ChapterTree.tsx  Icon.tsx  Inspector.tsx  ProjectCenter.tsx  ReadingEditor.tsx  SegmentReview.tsx
prototype/src/data/: demoBook.ts
prototype/src/styles/: global.css  tokens.css
(+1 files in other folders)
