[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/app-core",
    "crates/engine-core",
    "crates/engine-rpgmaker",
    "crates/qa-core",
    "crates/project-store",
    "crates/provider-core",
    "crates/translation-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
