[package]
name = "game-translator-app-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
game-translator-engine-core = { path = "../engine-core" }
game-translator-engine-rpgmaker = { path = "../engine-rpgmaker" }
game-translator-qa-core = { path = "../qa-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
