[package]
name = "game-translator-app-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
game-translator-content-core = { path = "../content-core" }
game-translator-content-game = { path = "../content-game" }
game-translator-content-rimworld = { path = "../content-rimworld" }
game-translator-engine-core = { path = "../engine-core" }
game-translator-engine-rpgmaker = { path = "../engine-rpgmaker" }
game-translator-engine-renpy = { path = "../engine-renpy" }
game-translator-qa-core = { path = "../qa-core" }
game-translator-provider-core = { path = "../provider-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
keyring.workspace = true

[lints]
workspace = true
