[package]
name = "game-translator-desktop"
build = "build.rs"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "game_translator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
game-translator-app-core = { path = "../../../crates/app-core" }
game-translator-engine-core = { path = "../../../crates/engine-core" }
game-translator-engine-rpgmaker = { path = "../../../crates/engine-rpgmaker" }
game-translator-provider-core = { path = "../../../crates/provider-core" }
game-translator-qa-core = { path = "../../../crates/qa-core" }
game-translator-translation-core = { path = "../../../crates/translation-core" }
rfd.workspace = true
serde.workspace = true
tauri = { version = "2.8", features = [] }

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[lints]
workspace = true
